Fix birthday field and spacing

--- a/src/pages/viewProfile.css
+++ b/src/pages/viewProfile.css
@@ -67,6 +67,18 @@
   justify-content: stretch;    
 }
 
+.info-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.contact-card .info-section p, .about-card .info-section p {
+  font-size: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 @media screen and (max-width: 768px) {
   .view-page-container .profile-cards {
     display: flex;
